# sheet-metal-server

./: pyproject.toml
main/: admin.py  pagination.py  urls.py
main/api/: customers.py  jobs.py  purchase_orders.py
main/management/commands/: populate_db.py
main/migrations/: 0001_initial.py
main/models/: __init__.py  common.py  customer.py  job.py  purchase_orders.py  quotes.py
main/serializers/: job.py
server/: settings.py  urls.py
